scene: Fix scaled rendering of software cursors

BUG: 479154